monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0276/A0276b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0276;

grammar A0276b extends de.monticore.grammar.cocos.invalid.A0276.A0276a {

  B = A;

}